2000-12-15  R. Lindsay Todd  <toddr@rpi.edu>

	* doc/design/qmconfig/design.xml: Add/fix id's.
	* doc/design/qmconfig/intro.xml: Likewise.
	* doc/design/qmconfig/overview.xml: Likewise.
	* doc/design/qmconfig/requirements.xml: Likewise.
	* doc/design/qmconfig/design-td.xml: Likewise.  Fix images.
	* doc/design/qmconfig/qmconfig.xml: Add qm.mod.

2000-12-14  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk ($(PRINTDIR)/$(PRINTPDF)): Return true even if empty
	$(DOCBITMAPS).

2000-12-14  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk ($(PRINTDIR)/$(PRINTPDF)): Handle empty $(DOCBITMAPS).

2000-12-14  Alex Samuel  <samuel@codesourcery.com>

	* README.sources: Update ChangeLog and documentation instructions. 

2000-12-13  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk ($(PRINTDIR)/$(PRINTPDF)): Copy bitmaps into print
	dir instead of setting paths. 
	* doc/design/qmconfig/design-probe.xml: Scale images.
	* doc/design/qmconfig/design-td.xml: Likewise.
	* doc/design/qmconfig/design.xml: Likewise.
	* doc/design/qmconfig/requirements.xml: Likewise.

2000-12-13  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk ($(HTMLMANIFEST)): Put graphics filename in manifest
	only.
	* doc/design/qmconfig/design-probe.xml: Adjust image filenames.
	* doc/design/qmconfig/design-td.xml: Likewise.
	* doc/design/qmconfig/design.xml: Likewise.
	* doc/design/qmconfig/requirements.xml: Likewise.

2000-12-13  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk ($(PRINTDIR)/$(PRINTPDF)): Set TEXINPUTS.
	* doc/design/qmconfig/Makefile (DOCBITMAPS): Set it.
	* doc/design/qmtext/iface.xml: Always require qmtest subcommand.

2000-12-13  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtest/iface.xml: Twiddle command-line syntax.

	* doc/design/qmtest/core.xml: Regularize entity ids.
	* doc/design/qmtest/impl.xml: Likewise.
	* doc/design/qmtest/qmtest.xml: Likewise.
	* doc/design/qmtest/req.xml: Likewise.

2000-12-07  Alex Samuel  <samuel@codesourcery.com>
