@@ -341,8 +341,8 @@
   </section>
 
   &design-lm.xml;
-  &design-probe.xml;
   &design-td.xml;
+  &design-probe.xml;
 
   <section><title>Remaining Modules</title>
 
